force-app/main/default/objects/FieloPLT__Segment__c/FieloPLT__Segment__c.object-meta.xml
<CustomObject>
    <description>Segments are identifiable characteristics shared among a group of Members.</description>
    <label>Segment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>