force-app/main/default/objects/FieloPLT__Segment__c/fields/FieloPLT__Description__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Description__c</fullName>
    <description>Segment detailed description.</description>
    <inlineHelpText>Enter Segment detailed description.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>