force-app/main/default/objects/FieloPLT__Segment__c/fields/FieloPLT__IsActive__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When ticked, the Segment is applied.</description>
    <inlineHelpText>When ticked, the Segment is applied.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>