force-app/main/default/objects/FieloPLT__Segment__c/fields/FieloPLT__RelatedSegments__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RelatedSegments__c</fullName>
    <description>It stores the different Segment IDs when assigning more than one Segment to Incentives and Rewards (Multisegment).</description>
    <inlineHelpText>It stores the different Segment IDs when assigning more than one Segment Incentives and Rewards (Multisegment).</inlineHelpText>
    <label>Related Segments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>