force-app/main/default/objects/FieloPLT__Segment__c/fields/FieloPLT__WHEREClause__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__WHEREClause__c</fullName>
    <description>The criteria that specify which Members are included in a Segment.</description>
    <inlineHelpText>These are the criteria that specify which Members are included in the Segment.</inlineHelpText>
    <label>WHERE Clause</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>