force-app/main/default/objects/FieloPLT__Segment__c/recordTypes/FieloPLT__Dynamic.recordType-meta.xml
<RecordType>
    <fullName>FieloPLT__Dynamic</fullName>
    <active>true</active>
    <description>It defines Criteria so that Members are automatically assessed and thus connected to the proper Segment.</description>
    <label>Dynamic</label>
</RecordType>