force-app/main/default/objects/FieloPLT__Segment__c/recordTypes/FieloPLT__Manual.recordType-meta.xml
<RecordType>
    <fullName>FieloPLT__Manual</fullName>
    <active>true</active>
    <description>Segment needs to be manually linked to the chosen Members.</description>
    <label>Manual</label>
</RecordType>