force-app/main/default/objects/FieloPLT__Segment__c/recordTypes/FieloPLT__Metasegment.recordType-meta.xml
<RecordType>
    <fullName>FieloPLT__Metasegment</fullName>
    <active>true</active>
    <description>Segment used to link two or more segments</description>
    <label>Metasegment</label>
</RecordType>