force-app/main/default/objects/FieloPLT__Segment__c/listViews/FieloPLT__All.listView-meta.xml
<ListView>
    <fullName>FieloPLT__All</fullName>
    <columns>NAME</columns>
    <columns>FieloPLT__IsActive__c</columns>
    <columns>FieloPLT__Description__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>FieloPLT__Program__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>